@@ -12,6 +12,11 @@
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  */
 
+#ifndef _WIN64
+/* See [Bug 2935503]: file mtime sets wrong time */
+#   define _USE_32BIT_TIME_T
+#endif
+
 #include <sys/stat.h>
 #include "tclInt.h"
 #include "tclPort.h"
