@@ -1,3 +1,8 @@
+2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclCmdAH.c:   [Bug 2935503] Windows: file mtime
+	* generic/tclIOUtil.c:  sets wrong time
+
 2011-10-11  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinFile.c:    [Bug 2935503] Incorrect mode field
